Dados do simulador consumidos e gravados no banco de dados