@@ -5,8 +5,10 @@ import com.teste.marcossantos.Simulador.de.api.entity.Sector;
 import com.teste.marcossantos.Simulador.de.api.entity.Spot;
 import com.teste.marcossantos.Simulador.de.api.repository.SectorRepository;
 import com.teste.marcossantos.Simulador.de.api.repository.SpotRepository;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
 
 import java.util.List;
 import java.util.Map;
@@ -17,32 +19,50 @@ import java.util.stream.Collectors;
 public class GarageService {
 
     @Autowired
-    private final SectorRepository sectorRepository;
+    private SectorRepository sectorRepository;
     @Autowired
-    private final SpotRepository spotRepository;
+    private SpotRepository spotRepository;
+    @Autowired
+    private RestTemplate restTemplate;
 
-    public GarageService(SectorRepository sectorRepository, SpotRepository spotRepository) {
-        this.sectorRepository = sectorRepository;
-        this.spotRepository = spotRepository;
-    }
 
-    public void saveGarageData(GarageResponse response) {
-        // Salva os setores e mapeia pelo nome (ex: "A")
-        List<Sector> savedSectors = sectorRepository.saveAll(response.getGarage());
+    @Transactional
+    public void importGarageData() {
+        GarageResponse response = restTemplate.getForObject("http://localhost:3000/garage", GarageResponse.class);
+
+        if (response == null || response.getGarage() == null || response.getSpots() == null) {
+            throw new RuntimeException("Resposta inválida do simulador");
+        }
+
+        spotRepository.deleteAllInBatch();
+        sectorRepository.deleteAllInBatch();
+
+        List<Sector> sectors = response.getGarage().stream().map(dto -> {
+            Sector s = new Sector();
+            s.setSector(dto.getSector());
+            s.setPrice(dto.getBase_price());
+            s.setMaxCapacity(dto.getMax_capacity());
+            s.setOpenHour(dto.getOpen_hour());
+            s.setCloseHour(dto.getClose_hour());
+            s.setDurationLimitMinutes(dto.getDuration_limit_minutes());
+            return s;
+        }).toList();
+
+        List<Sector> savedSectors = sectorRepository.saveAll(sectors);
+
         Map<String, Sector> sectorMap = savedSectors.stream()
-                .collect(Collectors.toMap(Sector::getSector, Function.identity()));
+                .collect(Collectors.toMap(Sector::getSector, s -> s));
 
-        // Transforma cada spot e relaciona com o objeto Sector
-        List<Spot> spotsToSave = response.getSpots().stream().map(spotDto -> {
-            Spot spot = new Spot();
-            spot.setId(spotDto.getId());
-            spot.setLat(spotDto.getLat());
-            spot.setLng(spotDto.getLng());
-            spot.setOccupied(spotDto.getOccupied());
-            spot.setSector(spotDto.getSector()); // relacionamento real
-            return spot;
-        }).collect(Collectors.toList());
+        List<Spot> spots = response.getSpots().stream().map(dto -> {
+            Spot s = new Spot();
+            s.setId(dto.getId());
+            s.setLat(dto.getLat());
+            s.setLng(dto.getLng());
+            s.setOccupied(dto.isOccupied());
+            s.setSector(sectorMap.get(dto.getSector()));
+            return s;
+        }).toList();
 
-        spotRepository.saveAll(spotsToSave);
-    }
+        spotRepository.saveAll(spots);
+    };
 }
